--- a/cherkashin-et-al-itams-2021.tex
+++ b/cherkashin-et-al-itams-2021.tex
@@ -99,23 +99,23 @@ Contemporary Web technologies development is aimed at more tight data integratio
 
 Geospatial data are of primary interest of people as many human activities are attached to object located on the Earth's surface.  There are a lot of on-line services helping users to navigate city streets, figure out places corresponding the required conditions (shopping centers, parking places, \emph{etc.}), observation of territories to familiarize themselves.  The objects of interest as any data objects are described with attributes of various kinds, like working hours of firms, their home site URLs, nearby bus stations.  At present, these software products trend to allow integration with their data via open formats and publishing principles, \emph{e.g.}, Linked Open Data \cite{lod}.
 
-The fault data are chosen as subject for representation and publishing in this investigation.  In the geology, researchers accumulate data obtained after an event observations, \emph{e.g.}, earthquakes, landslides, by analyzing remote sensing data and results of field works.  The obtained data are processed and interpreted, resulting in setting new attributes to a fault or their refinement.  According to the techniques of geological research, additional information are associated with attributes, clarifying their values.  Such clarification comprises precision characteristics, measurement conditions, reliability assessment, and paper references, where fault data were published.
+The fault data \cite{lunina} are chosen as subject for representation and publishing in this investigation.  In the geology, researchers accumulate data obtained after an event observations, \emph{e.g.}, earthquakes, landslides, by analyzing remote sensing data and results of field works.  The obtained data are processed and interpreted, resulting in setting new attributes to a fault or refinement their values.  According to the techniques of geological research, additional information are associated with attributes, clarifying their values.  Such clarification comprises precision characteristics, measurement conditions, reliability assessment, and paper references, where fault data were published.
 
 GIS\footnote{Abbreviation of Geographical Information System} represents spatial data in semantic defined layers.  For each object of a layer, one can associate a set of attribute values of auxiliary data.  The set of the attributes are the same for each object of the layer regardless of whether the attribute value is defined for an object or not.  Empty values are represented as ``\texttt{null}''s.  In the case of geological exploration, when a lot of attributes are undefined, this approach leads to sparse filled tables.  This, in turn, requires data modification and analysis algorithms to utilize additional data checking stages when using standard relation operations (SELECT, UPDATE, DELETE).
 
-Another question is attribute names definition expressing semantics of metadata.  For example, to define a precision of a value one could construct an attribute name with ``\texttt{\_prec}'' suffix, where name is its value attribute identifier.  Other types of metadata add more suffixes, as well as relations between suffixes and values are not defined anywhere in the database.  The formal definition is to be defined in a documentation or processing algorithms, thus, either informally defined or obfuscated, and practically not alienated.  Adding new attributes requires the user to devise new synthetic names.
+Another question is attribute names definition expressing semantics of metadata.  To define a precision of a value, one could construct an attribute name of ``\texttt{<name>\_prec}'' structure, where \texttt{<name>} is its value attribute identifier.  Other types of metadata add more suffixes, as well as relations between suffixes and values are not defined anywhere in the database.  The formal definition is to be described in documentation or defined as processing algorithms.  Thus, the inplied sematics is either informally defined or obfuscated and practically is not alienated.  Adding new attributes requires the user to devise new synthetic names.
 
-Web publication applications, as information systems, are to implement filtering functions, differentiating the value attributes and their metadata.  Screen widgets label names either defined in application or figured out from the attribute names.  Lack of ontological (vocabulary) formal domain definition forces developer to spend more efforts for user interface implementation.
+Web publication applications, as information systems, are to implement filtering functions, differentiating the value attributes and their metadata.  Screen widgets label names either defined in application configuration or figured out from the attribute names.  Lack of ontological (vocabulary) formal domain definition forces developer to spend more efforts for the user interface implementation.
 
-Since 2001 Semantic Web technologies have evolved in a substantial set of instruments for data storing, publishing, and software integration, allowing system designers and programmers, among standard means, to pass data between systems via published documents and application user interfaces, \emph{i.e.}, extending their set of functions.  Vocabularies and data instances are stored in graph databases, which provide SPARQL and other endpoints on top of HTTP protocols, enabling similar services as relational database servers for data access and modification.  The generalized problem statements and approaches to their solutions in the field of Semantic Web are the reasons of its constant development.
+Since 2001, Semantic Web technologies have evolved in a substantial set of instruments for data storing, publishing, and software integration, allowing system designers and programmers, among standard means, to pass data between systems via published documents and application user interfaces, \emph{i.e.}, extending their set of functions.  Vocabularies and data instances are stored in graph databases, which provide SPARQL and other endpoints on top of HTTP protocols, providing services for data access and modification similar to relational database servers.  The generalized problem statements and approaches to their solutions in the field of Semantic Web are the reasons of its constant development.
 
-Knowledge graphs (KG) \cite{hogan} are techniques of Semantic Web usage aimed at representation of data in a general flexible way allowing so-called ``natural'' evolving of domain image, including representation of incomplete knowledge.  This evolution corresponds to a scientific research process, where data is accumulated and analyzed.  KG enables both providing in addition distributed storage, federated query based access and modification, means for metadata definition, and formalized verification of its content.
+Knowledge graphs (KG) \cite{hogan} are techniques of Semantic Web usage aimed at representation of data in a general flexible way allowing so-called ``natural'' evolving of domain image, including representation of incomplete knowledge.  This evolution corresponds to a scientific research process, where data is permanently accumulated and analyzed.  KG technologies provide distributed storage, federated query based access and modification, means for metadata definition, and formalized verification of its content.
 
-The aim of this research and development is to represent existing tabular and spatial data from \cite{lunina,afs} as a knowledge graph with implementing a viewer, assessing ``working efficiency'' of a programmer and ``usability'' of KG services.  State further development perspectives, ranging them by priorities.
+The aim of this research and development is to represent existing tabular and spatial data from \cite{lunina,afs} as a knowledge graph with implementing a viewer, assessing ``working efficiency'' of a programmer, state further development perspectives, ranging them by priorities.
 
 \section{Data conversion}
 
-The original database structure is shown in Figure~\ref{fig:db-struct}.  This structure contains  field ``\texttt{ID}'' defining fault identifier, the fault name as a geographical entity, various characteristics with corresponding clarifications, seismic activity, name of compiler researcher and date of refinement.  Data is stored in \texttt{DBF} format, the record number relates the database record with spatial object of fault layer.  Field names in \texttt{DBF} file cannot be longer than ten characters, must be in capitalized, number of fields cannot be more than 255.
+The original database table structure is shown in Figure~\ref{fig:db-struct}.  This structure contains a number of fields, namely, ``\texttt{ID}'' defining fault identifier, the fault name as a geographical entity, various characteristics with corresponding clarifications, seismic activity, name of compiler researcher and date of refinement.  Data is stored in \texttt{DBF} format, the record number relates the database record with spatial object of fault layer.  Field names in \texttt{DBF} file cannot be longer than ten characters, should be capitalized, number of fields cannot be more than 255.
 \begin{figure}
   \centering
   \footnotesize
@@ -164,13 +164,13 @@ Definition Table
     Date Char (10) ;
 \end{verbatim}
   \end{multicols}
-  \caption{Part of the structure of the original database}
+  \caption{A part of the structure of the original database}
   \label{fig:db-struct}
 \end{figure}
 
   Identifiers of the attributes with common prefixes define one value with a clarification, \emph{e.g.}, ``\texttt{Depth}'' and ``\texttt{Length}'' of a fault are measured in kilometers, their values are clarified with ``quality'' attribute having suffix ``\texttt{\_Q}'' at the end.
 
-  Table content slice of the fault database is shown in Figure~\ref{fig:db-slice}.  It is sparse filled: many attributes are \texttt{null}s.  The field ``\texttt{Geomorphol\ldots}'' and some others is filled with values of predefined sets.  The consistency are controlled algorithmically with QGIS extension modules.  This flat structure and representation format are intended to be easily accessed and realized with standard relational database tools, but general violations of standard normal forms forces the developer to implement additional subroutines controlling a record content (semantics) in addition to the UPDATE DML\footnote{Abbreviation of Data Manipulation Language.} command.
+  Table content slice of the fault database is shown in Figure~\ref{fig:db-slice}.  It is sparse filled: many attributes are \texttt{null}s.  The field ``\texttt{Geomorphol\ldots}'' and some others are filled with values of their predefined sets.  The consistency are controlled algorithmically with QGIS \cite{foss} extension modules.  This flat structure and representation format are intended to be easily accessed and realized with standard relational database tools, but general violations of standard normal forms forces the developer to implement subroutines controlling a record content (semantics) in addition to the UPDATE DML\footnote{Abbreviation of Data Manipulation Language.} command.
 
   \begin{figure}
     \centering
@@ -179,9 +179,9 @@ Definition Table
     \label{fig:db-slice}
   \end{figure}
 
-Conversion started with defining T-Box\footnote{Abbreviation of Terminological Box, a set of basis domain terms and their relationships.} comprising the class of fault and its subclasses.  Subclasses correspond to various kinds of faults, \emph{e.g.}, normal, reverse, strike-slip, oblique.  As a differentiating property, ``\texttt{Slip\_sense}'' attribute used.  All the fault records when converted and assigned a class formed A-Box\footnote{Denotation of Instance Box, a set of the instances.}, a database of faults.  Non-\texttt{null} attributes of faults were converted into a literal relation, except those, which values were restricted to a finite set.  These attribute values presented as references to a descriptive constant added to T-Box.  These conversions were implemented as Python program loading \texttt{DBF}-files and generation \texttt{OWL2} \texttt{XML} ones.  After the conversion, the obtained \texttt{OWL}s of T-Box and A-Box were visually checked with Protégé, saved into Turtle (\texttt{ttl}) format.
+Conversion of the table to a KG started with defining T-Box\footnote{Abbreviation of Terminological Box, a set of basis domain terms and their relationships.} comprising the class of fault and its subclasses.  Subclasses correspond to various kinds of faults, \emph{e.g.}, normal, reverse, strike-slip, oblique.  As a differentiating property, ``\texttt{Slip\_sense}'' attribute was used.  All the fault records have been converted into triplets and assigned a class.  The resulting set of triplets formed A-Box\footnote{Denotation of Instance Box, a set of the instances.}, a KG of fault instances.  Non-\texttt{null} attributes of faults were converted into a literal relation, except those, which values were restricted to a finite set.  These attribute values presented as references to a descriptive constant added to T-Box.  These conversions were implemented as Python program loading \texttt{DBF}-files and generation \texttt{OWL2} \texttt{XML} ones.  After the conversion, the obtained \texttt{OWL}s of T-Box and A-Box were visually checked with Protégé, saved into Turtle (\texttt{ttl}) format for the further use.
 
-The results of conversions were manually loaded into GraphDB and Jena KG servers.  For each part (T- and A-Box) a global namespace (\texttt{aft}, \texttt{af}) were allocated: \url{http://irnok.net/ontologies/ActiveFaultTerms\#} and \href{http://irnok.net/ontologies/ActiveFault\#}{\ldots/ActiveFault\#}.  In the software, for each KG one must set up an individual endpoint providing access.  GraphDB user interface were used to check the correctness of class-instance relations with executing SPARQL-queries.  The peculiarity of GraphDB usage is the necessity to ``activate'' each KG endpoint via user interface after loading their KG contents.  After conversion and set up of the endpoint they will be available at port 7200, URL will be formed out of server address and endpoint name.  An example of a converted item is shown here
+The results of conversions were manually loaded into GraphDB and Jena servers.  For each part (T- and A-Box) a global namespace (\texttt{aft}, \texttt{af}) were allocated: \url{http://irnok.net/ontologies/ActiveFaultTerms\#} and \href{http://irnok.net/ontologies/ActiveFault\#}{\ldots/ActiveFault\#}.  In the software, for each KG one must set up an individual endpoint providing access.  GraphDB user interface were used to check the correctness of class-instance relations with executing SPARQL-queries.  The peculiarity of GraphDB usage is the necessity to ``activate'' each KG endpoint via user interface after loading their KG contents.  After conversion and set up of the endpoint, they will be available at port 7200, URL will be formed out of server address and endpoint name.  An example of a converted item is shown here
 
 \begin{multicols}{2}\tiny
   \begin{verbatim}
@@ -240,9 +240,9 @@ af:RUAF_996 rdf:type owl:NamedIndividual ,
 
 \section{Viewer implementation}
 
-Our viewer is a Web-2.0 application composed out of React components.  The application maintains its state with Redux. Properly used Redux allows one to control viewer widgets content and structures solely by defining state change functions.
+Viewer application is a Web-2.0 browser widget composed out of React components.  The application maintains its state with Redux. Properly used Redux allows one to control viewer widgets content and structures solely by defining state change functions.  The state transitions happened whenever a set of visualized faults has changed.
 
-Rendering maps is based on React wrapper of \texttt{leaflet.js} library.  The library allows one to draw interactive graphics objects (polygons) on a topological basis.  Leaflet supports various sources, such as \href{https://openstreetmap.org/}{openstrrtmpa.org}, which is default one.  Fault shapes were converted from \texttt{KML} format to leaflet interpretable \texttt{JSON} and are being loaded by application on demand from web server.
+Rendering maps is based on React wrapper of \texttt{leaflet.js} library.  The library allows one to draw interactive graphics objects (polygons) on a topological basis.  Leaflet supports various sources of the bases such as \href{https://openstreetmap.org/}{openstrrtmpa.org}, which is default one.  Fault shapes were converted from \texttt{KML} format to leaflet interpretable \texttt{JSON} and are being loaded by application on demand from web server.
 
 By default, viewer shows all faults from KG, the result of a SPARQL query requesting all objects of a class \texttt{aft:Fault}\footnote{Abbreviated namespace synonym of \url{http://irnok.net/ontologies/ActiveFaultTerms\#Fault}.}, \emph{i.e.} all the instances\footnote{All faults are instances of \texttt{aft:Fault}.}.  There is a form in the user interface for setting filtering conditions.  They change the default SPARQL query, adding restrictions.  For the debugging and developing, one version of the viewer contains a form for free-form SPARQL query definition, which execution results also showed as a fault map.
 
@@ -250,7 +250,7 @@ Viewing fault attributes is implemented as a form document improved with \texttt
 %
 % \subsection{Examples of the usage}
 %
-In Figure~\ref{fig:ex}, viewer window is shown.  The image consists of topological basis loaded from \texttt{openstreetmap.org} server, faults drawn over the basis, filter form at the left hand side, expanding form of free-text SPARQL query, popup with fault name pointing the fault shape, and a form showing known attributes of the fault.  As a subject of interest, Irkut-Ushakovsky fault being extended through Irkutsk city is chosen.
+In Figure~\ref{fig:ex}, viewer window is shown.  The image consists of topological basis loaded from \texttt{openstreetmap.org} server, faults drawn over the basis, filter form at the left hand side, expanding form of free-text SPARQL query, popup with fault name pointing the fault shape, and a form showing known attributes of the fault.  As a subject of interest, Irkut-Ushakovsky fault extended through Irkutsk city is chosen.
 
 \begin{figure}
   \centering
@@ -262,9 +262,9 @@ In Figure~\ref{fig:ex}, viewer window is shown.  The image consists of topologic
 
 \section{Related Works}
 
-The activity related to the subject of our investigation are observed since beginning of 2010-th.  At that time probably a lot of vocabularies were standardized, their representation data formats become widely used.  At that time various XML processing techniques and tools were developed, \emph{e.g.}, XPath, XQuery, XSL\footnote{Abbreviation of eXtensible Stylesheet Language, a technology for processing XML structures.}, as well as SPARQL standards were acknowledged (2008, v.~1.0, 2013, v.~1.1).  Thus, in early 2010-ths Semantic Web becomes not only academic field of interest, but also a set of technologies, oriented on solving practical problems.  Among found, we would like to mention the following projects.
+The activity related to the field of our investigation are observed since beginning of 2010-th.  At that time probably a lot of vocabularies were standardized, their representation data formats become widely used, as well as various XML processing techniques and tools were developed, \emph{e.g.}, XPath, XQuery, XSL\footnote{Abbreviation of eXtensible Stylesheet Language, a technology for processing XML structures.}.  SPARQL standards were acknowledged (2008, v.~1.0, 2013, v.~1.1).  Thus, in early 2010-ths Semantic Web becomes not only academic field of interest, but also a set of technologies, oriented on solving practical problems. We would like to mention the following projects representing the state of the art in the domain.
 
-  The project \cite{lgd} was to represent OpenSteetMap (OSM) data as a KG, they
+  The project \cite{lgd} was to represent OpenSteetMap (OSM) data as a KG, researchers
   \begin{itemize}
   \item Resemble the \texttt{DBPedia.org} project formalizing Wikipedia data but over the OSM database;
   \item Convert OSM data into RDF adhering LOD principles;
@@ -282,13 +282,13 @@ The activity related to the subject of our investigation are observed since begi
   \item KG includes diverse information as port calls made by oceanographic cruises, physical sample metadata, research project funding and staffing, and authorship of technical reports;
   \item Implements LOD (4 of 5 stars) and federated SPARQL integration between distributed parts of KG;
   \item Contains 45 millions RDF triples with vocabularies and geo-visualization tools
-  \item Describes interlinked expeditions (\textbf{R2}), oceanography (\textbf{BCO-DMO}), ocean floor microbiome (\textbf{IODP}), marine life papers (\textbf{MBLWHOI}), rock samples (\textbf{SESAR}), metadata of external research (\textbf{DataONE}),  projects \& conferences (\textbf{AGU-NSF}), sediment geochemy (\textbf{NGDB}), Antarctica ice (\textbf{USAP}).
+  \item Describes interlinked expeditions (\textbf{R2}), oceanography (\textbf{BCO-DMO}), ocean floor microbiome (\textbf{IODP}), marine life papers (\textbf{MBLWHOI}), rock samples (\textbf{SESAR}), metadata of external research (\textbf{DataONE}),  projects \& conferences (\textbf{AGU-NSF}), sediment geochemistry (\textbf{NGDB}), Antarctica ice (\textbf{USAP}).
   \end{itemize}
   In the project, an update procedure (harvesting) is implemented to ensure the consistence of the KG w.r.t. the geo-base ontology (GBO).
 
-   The project \cite{abid} deals with developing a web GIS automatically publishing DBPedia data.  The aim was to test Web-application tools capabilities in implementing GIS, which publishes celebrities' information living in a hometown/city. The publishing is realized respecting LOD and Open Government Data principles.   GIS module was realized on the topological basis and API~v3 of Google. Celebrities' attribute data is loaded from DBPedia with SPARQL queries and rendered with jQuery's Data table plug-in.
+   The project \cite{abid} deals with developing a web GIS automatically publishing DBPedia data.  The aim was to test Web-application tools capabilities in implementing GIS, which publishes celebrities' information living in a hometown/city. This is realized respecting LOD and Open Government Data principles.   GIS module was realized on the topological basis and API~v3 of Google. Celebrities' attribute data is loaded from DBPedia with SPARQL queries and rendered with a jQuery's Data table plug-in.
 
-   The project \cite{iwaniak17} goal is to convert various existing GIS data into explicit knowledge, thus, forming a Spatial Data Infrastructure (SDI). The following requirements are to be met.
+   The project \cite{iwaniak1,iwaniak17} goal is to convert various existing GIS data into explicit knowledge, thus, forming a Spatial Data Infrastructure (SDI). The following requirements are to be met.
   \begin{itemize}
   \item Integrate existing geoportal data into a KB, including dynamic data;
   \item Geoportal data must be LOD, \emph{e.g.}, HTML is enriched with RDFa;
@@ -298,16 +298,16 @@ The activity related to the subject of our investigation are observed since begi
   \item Targeting to GeoSPARQL (sfIntersects, sfOverlaps, sfTouches, sfWithin, sfContains) language extension;
   \item Metadata inference from the data source properties;
   \end{itemize}
-  The developed technologies are used to integrate public services data in Mazowieckie Voivodeship of Poland accounting European Union Open Government initiative.  For the user, the filtering queries are realized by interpreting a limited set of keywords.
+  The developed technologies are used to integrate public services data in Mazowieckie Voivodeship of Poland accounting European Union Open Government Initiative.  For the user, the filtering queries are realized by interpreting a limited set of keywords.
 
 \section{Future activity plan}
 
-In our project, in the far perspective, we are to develop tools for modeling natural phenomena, \emph{e.g.}, distribution of pollutant elements originating from faults.  And in this paper we investigate Web 3.0 technologies for constructing nowadays WEB-GIS software.
+In our project, in the far perspective, we are to develop tools for modeling natural phenomena, \emph{e.g.}, distribution of pollutant elements originating from faults and anthropogenic sources.  And in this paper, we investigate Web 3.0 technologies for constructing nowadays WEB-GIS software.
 
 Further development plan is as follows.
 \begin{enumerate}
 \item Improve the structure of the fault KG by means of adding various event data (earthquakes, landslides);
-\item Add textual data and paper references for formal justification;
+\item Add textual data and paper references for informal justification of KG content;
 \item Provide a natural language interface for automation of complex filtering condition input;
 \item Implement more on-demand interface elements loading, and function for choosing ``similar'' objects;
 \item Implement editing of the KG and spatial data, \emph{i.e.}, adopt the corresponding leaflet functionality;
@@ -316,7 +316,7 @@ Further development plan is as follows.
 \item Implement various analytical functionality for domain problem-solving;
 \end{enumerate}
 
-The target infrastructure architecture is shown in Figure~\ref{fig:target}.  The main bonding technologies of the environment are services represented as components interacting via HTTP, and knowledge based data processing implemented in SWI-Prolog and Logtalk logic programming languages.  The final research result reports are partially generated by means of Authoring tools, which are developed by our research group \cite{authoring}.
+The target infrastructure architecture is shown in Figure~\ref{fig:target} \cite{zont19}.  The main bonding technologies of the environment are services represented as components interacting via HTTP, and knowledge based data processing implemented in SWI-Prolog and Logtalk logic programming languages.  The final research result reports are partially generated by means of authoring tools, which are developed by our research group \cite{authoring}.
 \begin{figure}
   \centering
   \includegraphics[width=0.8\linewidth]{architecture.pdf}
@@ -330,25 +330,25 @@ The proposed technology and software allows one to construct Web-GIS systems for
  \begin{itemize}
   % \item Converged notions \textbf{data} and \textbf{knowledge} as something is \textbf{known}
   \item Object data, relations, and metadata (vocabularies) are representable in KG;
-  \item Processes of \textbf{node formation} and \textbf{improvement} of graph structure are done in parallel, \emph{e.g.}, with UPDATE SPARQL queries;
+  \item Processes of \textbf{node formation} and \textbf{improvement} of graph structure are done in parallel, \emph{e.g.}, with SPARQL UPDATE and CREATE queries;
   \item Developers can \textbf{postpone} the formal definition of data schemata;
   \item KG is interpreted in three types of fundamental schemata:
     \begin{itemize}
     \item \textbf{semantic}, aimed at representation of basis relations and type structures,
     \item \textbf{validating}, \emph{e.g.}, diligent formal definition in a KG can be verified w.r.t. sets of interpreting rules, and
-    \item \textbf{emergent} aimed at inferring sets of more generalized structures and \textbf{reconstruction} a KG structure.
+    \item \textbf{emergent} aimed at inferring more generalized structures from the current KG content and \textbf{reconstruction} the KG structure.
     \end{itemize}
   \end{itemize}
 
 In the most of domains, the existing data can be easily converted to a KG, loaded to a KG server and be accessed via SPARQL endpoints.  A familiar tabular representation can be reconstructed with queries.  Spending a reasonable time finding relevant to the domain vocabularies (ontologies) and adapting data conversion procedures to these vocabularies, one can obtain a common model description of a problem and shift data publishing and integration to a more higher level.
 
-In order to construct an environment for natural phenomena spatial modeling and master KG technologies, we created a GIS viewer for existing data converted in a KG \cite{lunina}.  The viewer interprets SPARQL queries results as a map.  The nowadays Web 2.0 and 3.0 technologies allowed us to construct individual GIS application in a reasonable time, namely, two students constructed the application MVP in two months.  This is thanks to the present levels of technologies and quality of libraries.
+In order to construct an environment for natural phenomena spatial modeling and master KG technologies, we created a GIS viewer for existing data converted in a KG \cite{lunina,afs}.  KG structures allowed us to improve structure of data originated from tables with forced violations imposed by a tabular representation of the scientific research data.  The viewer interprets SPARQL queries results as a map.   The nowadays Web 2.0 and 3.0 technologies allowed us to construct individual GIS application in a reasonable time, namely, two students constructed the application MVP in two months.  This is thanks to the present levels of technologies and quality of used libraries.
 
 \begin{acknowledgments}
 
-  The results were obtained within the state assignment of the Ministry of Education and Science of Russia, the project ``Methods and technologies of a cloud-based service-oriented digital platform for collecting, storing and processing large volumes of multi-format interdisciplinary data and knowledge based on the use of artificial intelligence, a model-driven approach and machine learning'' (State registration No.~121030500071-2).
+  The results were obtained within the state assignment of the Ministry of Education and Science of Russia, the project ``Methods and technologies of a cloud-based service-oriented digital platform for collecting, storing and processing large volumes of multi-format interdisciplinary data and knowledge based on the use of artificial intelligence, a model-driven approach and machine learning'', No.~FWEW-2021-0005 (State registration No.~121030500071-2).
 
-  The study was partially carried out within the basic budgetary research project ``Modern geodynamics, mechanisms of destruction of the lithosphere and hazardous geological processes in Central Asia'', No. FWEF-2021-0009.
+  The study was partially carried out within the basic budgetary research project ``Modern geodynamics, mechanisms of destruction of the lithosphere and hazardous geological processes in Central Asia'', No.~FWEF-2021-0009.
 
   The results obtained with the use of the network infrastructure of Telecommunication center of collective use ``Integrated information-computational network of Irkutsk scientific-educational complex'' (\url{http://net.icc.ru}).
 \end{acknowledgments}
@@ -359,29 +359,29 @@ In order to construct an environment for natural phenomena spatial modeling and 
 
 \begin{thebibliography}{99}
 
-\bibitem{hogan} Aidan Hogan, Eva Blomqvist, Michael Cochez, Claudia D’Amato \emph{et al}. Knowledge Graphs. \url{https://arxiv.org/abs/2003.02320v5}
-\bibitem{lgd} Claus Stadler, Jens Lehmann, Konrad Höffner, Sören Auer. LinkedGeoData: A core for a web of spatial open data. Semantic Web 3 (2012) 333–354. \doi{10.3233/SW-2011-0052}
+\bibitem{lod} C.~Bizer, T.~Heath, T.~Berners-Lee, Linked Data -- The Story So Far. Int. J. Semantic Web Inf. Syst., 5 (2009), pp.~1--22. \doi{10.4018/jswis.2009081901}
 
-\bibitem{iwaniak1} Adam Iwaniak, Iwona Kaczmarek, Marek Strzelecki, Jaromar Lukowicz, Piotr Jankowski. Enriching and improving the quality of linked data with GIS. \doi{10.1515/geo-2016-0c020}
+\bibitem{lunina} O.~V.~Lunina.  The digital map of the pliocene quaternary crustal faults in the southern east siberia and the adjacent northern Mongolia. Geodynamics \& Tectonophysics. 7(3) (2016). pp.~407-434. \doi{10.5800/GT-2016-7-3-0215}
 
-\bibitem{iwaniak17} Adam Iwaniak, Marta Leszczuk, Marek Strzelecki, Francis Harvey, Iwona Kaczmarek. A Novel Approach for Publishing Linked Open Geodata from National Registries with the Use of Semantically Annotated Context Dependent Web Pages. International Journal of Geo-Information. 6, 252, 2017. \doi{10.3390/ijgi6080252}
+\bibitem{hogan} A.~Hogan, E.~Blomqvist, M.~Cochez, C.~D’Amato \emph{et al}. Knowledge Graphs, 2020. \url{https://arxiv.org/abs/2003.02320v5}
 
-\bibitem{abid} Tarek Abid, Hafed Zarzour. Integrating Linked Open Data in Geographical
-Information System. International Conference on Information Technology for Organization Development. 2014.
+\bibitem{afs} A.~A.~Gladkov, O.~V.~Lunina. Cartographic service ``Activetectonics''. \url{http://activetectonics.ru/} (access date: 20-Sep-2021)
 
-\bibitem{geolink} Michelle Cheatham, Adila Krisnadhi, Reihaneh Amini, Pascal Hitzler, \emph{et al} (2018) The GeoLink knowledge graph, Big Earth Data, 2:2, 131-143, \doi{10.1080/20964471.2018.1469291}
+\bibitem{foss} M.~Leidig, R.~Teeuw. Free software: A review, in the context of disaster management. International Journal of Applied Earth Observation and Geoinformation, 42 (2015), pp.~49-56. \doi{10.1016/j.jag.2015.05.012}.
 
-\bibitem{lunina} Oksana V. Lunina.  The digital map of the pliocene quaternary crustal faults in the southern east siberia and the adjacent northern Mongolia. Geodynamics \& Tectonophysics. 2016. 7(3):407-434. \doi{10.5800/GT-2016-7-3-0215}
-\bibitem{afs} Cartographic service Activetectonics. \url{http://activetectonics.ru/} (access date: 20-Sep-2021)
-\bibitem{foss} Mathias Leidig, Richard Teeuw. Free software: A review, in the context of disaster management. 2015. International Journal of Applied Earth Observation and Geoinformation,
-Vol.~42, pp.~49-56, ISSN 0303-2434, \doi{10.1016/j.jag.2015.05.012}.
+\bibitem{lgd} C.~Stadler, J.~Lehmann, K.~Höffner, S.~Auer. LinkedGeoData: A core for a web of spatial open data. Semantic Web 3 (2012) 333–354. \doi{10.3233/SW-2011-0052}
 
-  \bibitem{authoring} E. Cherkashin, A. Shigarov, V. Paramonov and A. Mikhailov, "Digital archives supporting document content inference", Procs of 42-nd International Convention on Information and Communication Technology Electronics and Microelectronics (MIPRO), pp. 1037-1042, 20–24 May, 2019. \doi{https://doi.org/10.23919/MIPRO.2019.8757196}
+\bibitem{geolink} M.~Cheatham, A.~Krisnadhi, R.~Amini, P.~Hitzler, \emph{et al}. The GeoLink knowledge graph, Big Earth Data, 2:2 (2018), pp.~131-143. \doi{10.1080/20964471.2018.1469291}
 
-\bibitem{zont19}  Cherkashin E, Shigarov A and Paramonov V 2019 Representation of MDA transformation with logical objects \emph{International Multi-Conference on Engineering, Computer and Information Sciences (SIBIRCON), Novosibirsk, Russia} 0913--8 \doi{10.1109/SIBIRCON48586.2019.8958008}
+\bibitem{abid} T.~Abid, H.~Zarzour. Integrating linked open data in geographical information system. Procs of. International Conference on Information Technology for Organization Development. Oct 19-20, 2014, University of Tebessa, Tebessa, Algeria (2014).
 
-  \bibitem{lod}
+\bibitem{iwaniak1} A.~Iwaniak, I.~Kaczmarek, M.~Strzelecki, J.~Lukowicz, P.~Jankowski. Enriching and improving the quality of linked data with GIS. Open Geosciences, Vol.~8, 1~(2016) pp.~323-336. \doi{10.1515/geo-2016-0020}
 
+\bibitem{iwaniak17} A.~Iwaniak, M.~Leszczuk, M.~Strzelecki, F.~Harvey, I.~Kaczmarek. A Novel Approach for Publishing Linked Open Geodata from National Registries with the Use of Semantically Annotated Context Dependent Web Pages. International Journal of Geo-Information. 6, 252 (2017). \doi{10.3390/ijgi6080252}
+
+\bibitem{zont19} E.~Cherkashin, A.~Shigarov, V.~Paramonov. Representation of MDA transformation with logical objects. International Multi-Conference on Engineering, Computer and Information Sciences (SIBIRCON), Novosibirsk, Russia. (2019) 0913--0918 \doi{10.1109/SIBIRCON48586.2019.8958008}
+
+\bibitem{authoring} E.~Cherkashin, A.~Shigarov, V.~Paramonov, A.~Mikhailov, Digital archives supporting document content inference, Procs of 42-nd International Convention on Information and Communication Technology Electronics and Microelectronics (MIPRO), May, 20–24, 2019. pp. 1037-1042. \doi{https://doi.org/10.23919/MIPRO.2019.8757196}
 \end{thebibliography}
 
 %%
@@ -390,8 +390,8 @@ Vol.~42, pp.~49-56, ISSN 0303-2434, \doi{10.1016/j.jag.2015.05.012}.
 
 \section{Online Resources}
 
-The sources for the viewer are being developed at
-\href{https://github.com/De17eon/GRL}{GitHub}.
+The sources for the viewer are being developed at Github
+\url{https://github.com/De17eon/GRL}.
 
 \end{document}
 
