Added URL before URL. Release at least!

--- a/cherkashin-et-al-itams-2021.tex
+++ b/cherkashin-et-al-itams-2021.tex
@@ -390,8 +390,7 @@ In order to construct an environment for natural phenomena spatial modeling and 
 
 \section{Online Resources}
 
-The sources for the viewer are being developed at Github
-\url{https://github.com/De17eon/GRL}.
+The sources for the viewer are being developed at Github, URL:~\url{https://github.com/De17eon/GRL}.
 
 \end{document}
 
