--- a/cherkashin-et-al-itams-2021.tex
+++ b/cherkashin-et-al-itams-2021.tex
@@ -361,7 +361,7 @@ In order to construct an environment for natural phenomena spatial modeling and 
 
 \bibitem{lod} C.~Bizer, T.~Heath, T.~Berners-Lee, Linked Data -- The Story So Far. Int. J. Semantic Web Inf. Syst., 5 (2009), pp.~1--22. \doi{10.4018/jswis.2009081901}
 
-\bibitem{lunina} O.~V.~Lunina.  The digital map of the pliocene quaternary crustal faults in the southern east siberia and the adjacent northern Mongolia. Geodynamics \& Tectonophysics. 7(3) (2016). pp.~407-434. \doi{10.5800/GT-2016-7-3-0215}
+\bibitem{lunina} O.~V.~Lunina.  The digital map of the Pliocene–Quaternary crustal faults in the Southern East Siberia and the adjacent Northern Mongolia. Geodynamics \& Tectonophysics.  V.~7(3) (2016). pp.~407-434. (in Russian) \doi{10.5800/GT-2016-7-3-0215}
 
 \bibitem{hogan} A.~Hogan, E.~Blomqvist, M.~Cochez, C.~D’Amato \emph{et al}. Knowledge Graphs, 2020. \url{https://arxiv.org/abs/2003.02320v5}
 
